  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.

- Bug #1467952: os.listdir() now correctly raises an error if readdir()
  fails with an error condition.

- Fix bsddb.db.DBError derived exceptions so they can be unpickled.

- Bug #1117761: bsddb.*open() no longer raises an exception when using
  the cachesize parameter.

Library
-------

- Bug #1501223: Possible overflow in _PySys_Init() when reading the code page
  under Windows.

- Patch #1478292. ``doctest.register_optionflag(name)`` shouldn't create a
  new flag when ``name`` is already the name of an option flag.

- Bug #1473760: ``tempfile.TemporaryFile()`` could hang on Windows, when
  called from a thread spawned as a side effect of importing a module.

- The ``__del__`` method of class ``local`` in module ``_threading_local``
  returned before accomplishing any of its intended cleanup.

- Patch #1191700: Adjust column alignment in bdb breakpoint lists.

- The email module's parsedate_tz function now sets the daylight savings
  flag to -1 (unknown) since it can't tell from the date whether it should
  be set.

- Bug #1460340: ``random.sample(dict)`` failed in various ways.  Dicts
  aren't officially supported here, and trying to use them will probably
  raise an exception some day.  But dicts have been allowed, and "mostly
  worked", so support for them won't go away without warning.

Tools/Demos
-----------

Build
-----

- OpenBSD 3.9 is now supported.

- Test for sys/statvfs.h before including it, as statvfs is present
  on some OSX installation, but its header file is not.

- Fix test_long failure on Tru64 with gcc by using -mieee gcc option.

Documentation
-------------

- Bug #1337990: clarified that ``doctest`` does not support examples
  requiring both expected output and an exception.


What's New in Python 2.4.3?
===========================

*Release date: 29-MAR-2006*

Core and builtins
-----------------

- A few reference leaks were squished.
